--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,5 +51,5 @@ button {
 .book h3{
   margin: 20px;
   margin-left: 45px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: monospace;
 }
