--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  /* background: linear-gradient(to bottom right, #333333, #121212); */
 }
 
 .information {
@@ -18,13 +19,21 @@ input {
   font-size: 20px;
   padding-left: 10px;
   margin: 5px;
+  border: 2px solid red;
 }
 
 button {
-  width: 300px;
-  height: 50px;
-  font-size: 20px;
-  margin-top: 15px;
+  height: 60px;
+  background-color: #1197cc;
+  box-shadow: #094c66 4px 4px 0px;
+  border-radius: 8px;
+  transition: transform 200ms, box-shadow 200ms;
+  
+}
+
+button:active{
+  transform: translateY(4px) translateX(4px);
+  box-shadow: #094c66 0px 0px 0px;
 }
 
 
